# ai-tools-compare

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 36bf768dcef1_create_ai_models_table.py
backend/app/api/: models.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: ai_model.py
backend/app/schemas/: ai_model.py
backend/scripts/: seed_models.py
backend/tests/: conftest.py  test_models.py
frontend/: Dockerfile  astro.config.mjs  nginx.conf  package-lock.json  package.json
frontend/src/components/: ModelsTable.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/lib/: api.ts
frontend/src/pages/: index.astro  models.astro
frontend/src/styles/: global.css
frontend/src/types/: api.ts
scripts/: backup.sh
